--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,59 @@ body{
     font-family: Ubuntu, Arial;
     width: 100%;
     height: 100%;
+    background-color: #787878;
 }
 
 header {
     background: #2B3035;
+}
+
+section#inicio h2{
+    font-size: 4rem;
+    padding-top: 250px;
+    padding-left: 150px;
+}
+
+section#inicio span{
+    font-size: 1.2rem;
+    padding-left: 280px;
+}
+
+img#logoftt {
+    display: block;
+    width: 450px;
+    height: 450px;
+    padding: 0 0;
+    position: absolute;
+    top: 250px;
+    right: 250px;
+}
+
+@media (max-width: 1024px) {
+    section#inicio h2 {
+        font-size: 3.5rem;
+        padding: 10px 0px 0px 0px;
+    }
+
+    section#inicio span{
+        display: flex;
+        align-items: center;
+        font-size: 1rem;
+        padding: 0px 0px 10px 0px;
+        text-align: center;
+    }
+
+    section#inicio {
+        display: flex;
+        text-align: center;
+        overflow-y: hidden;
+        left: auto
+    }
+    
+    img#logoftt {
+        display: flex;
+        position: static;
+        width: auto;
+        height: auto;
+    }
 }
