--- a/templates/index.html
+++ b/templates/index.html
@@ -50,13 +50,29 @@
           </nav>
 </header>
 <body>
-    <section id="inicio" class="row m-1 p-1">
-        <div >
+    <section id="inicio" class="row m-0 p-0">
+        <div>
             <h2 class="text-black text-shadow">Fábrica de Tecnologias Turing</h2>
             <span id="subtitle" class="text-black text-shadow">Projeto da UniEvangélica voltado para o desenvolvimento de softwares.</span>
             
         </div>
         <img class="" id='logoftt'src="../static/imgs/technology.png">
+    </section>
+    <section id="sobre" class="container mt-5">
+        <div class="row w-100">
+            <div class="col-md-12">
+                <h2 class="pt-3">Sobre</h2>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <img class="img-fluid shadow" src="../static/imgs/logoftt.png">
+            </div>
+            <div class="col-md-8">
+                <p>A Fábrica de Tecnologias Turing é um projeto da faculdade de engenharia de software que tem como objetivo desenvolver softwares para a universidade. Composta por uma equipe multidisciplinar de estudantes e professores, a fábrica utiliza as mais avançadas tecnologias para criar soluções inovadoras que ajudam a melhorar a vida acadêmica e administrativa da instituição. Desde seu lançamento, a fábrica já desenvolveu diversos aplicativos e sistemas que têm sido amplamente utilizados pelos alunos e funcionários da universidade.</p>
+            </div>
+        </div>
     </section>
     <script src="../static/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
