--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,12 @@ header {
     background: #2B3035;
 }
 
+section#inicio {
+    height: 100vh;
+    width: 100vh;
+
+}
+
 section#inicio h2{
     font-size: 4rem;
     padding-top: 250px;
@@ -50,7 +56,8 @@ img#logoftt {
         display: flex;
         text-align: center;
         overflow-y: hidden;
-        left: auto
+        left: auto;
+        padding-bottom: 400px;
     }
     
     img#logoftt {
@@ -59,4 +66,8 @@ img#logoftt {
         width: auto;
         height: auto;
     }
+}
+
+#sobre p{
+    font-size: 1.2rem;
 }
