--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-body{
+body {
     font-family: Ubuntu, Arial;
     width: 100%;
     height: 100%;
@@ -11,21 +11,47 @@ header {
     background: #2B3035;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
+h2 {
+    color: #000000;
+}
+
 section#inicio {
     height: 100vh;
     width: 100vh;
 
 }
 
-section#inicio h2{
+section#inicio h2 {
     font-size: 4rem;
     padding-top: 250px;
     padding-left: 150px;
+    margin: 0px 0px 10px 10px;
+    width: 70rem;
 }
 
-section#inicio span{
+section#inicio span {
     font-size: 1.2rem;
     padding-left: 280px;
+    margin: 0px 0px 0px 10px;
+}
+
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    width: 12px;
+    box-shadow: inset 0 0 .3rem #00000050;
+    background-color: #fff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #212529;
+    border-radius: 0%;
 }
 
 img#logoftt {
@@ -35,16 +61,57 @@ img#logoftt {
     padding: 0 0;
     position: absolute;
     top: 250px;
-    right: 250px;
+    right: 360px;
+}
+
+img.card-img-top-1 {
+    width: 622px;
+    height: 270px;
+}
+
+@media (max-width: 1024px) {
+    img.card-img-top-1 {
+        width: 320px;
+        height: 170px;
+    }
+    
+}
+
+.container-1 {
+    background-color: #d4d4d4;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.2);
+  }
+
+div.card.p-5.shadow.border-2 {
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+@media only screen and (min-width: 768px) {
+    body {
+        font-size: 18px;
+    }
+}
+
+/* Estilos para telas grandes */
+@media only screen and (min-width: 1200px) {
+    body {
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 1024px) {
     section#inicio h2 {
         font-size: 3.5rem;
         padding: 10px 0px 0px 0px;
+        margin: 50px, 16px;
+        text-align: center;
+        width: auto;
     }
 
-    section#inicio span{
+    section#inicio span {
         display: flex;
         align-items: center;
         font-size: 1rem;
@@ -59,15 +126,92 @@ img#logoftt {
         left: auto;
         padding-bottom: 400px;
     }
-    
+
     img#logoftt {
         display: flex;
+        padding-left: 2%;
         position: static;
-        width: auto;
-        height: auto;
+        width: 375px;
+        height: 370px;
     }
 }
 
-#sobre p{
+@media (max-width: 1024px) {
+    section#inicio {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+
+#sobre p {
     font-size: 1.2rem;
 }
+
+p#textoftt {
+    margin-top: 14%;
+    padding-left: 15px;
+}
+
+.carousel-control-prev {
+    margin-left: -8rem;
+    
+}
+
+.carousel-control-next {
+    margin-right: -8rem;
+}
+
+.carousel-indicators {
+    margin-bottom: -40px;
+}
+
+/*animações*/
+
+[data-anime] {
+    opacity: 0;
+    transition: 1s;
+}
+
+[data-anime="down"] {
+    transform: translate3d(0, -100%, 0);
+}
+
+[data-anime="up"] {
+    transform: translate3d(0, 100%, 0);
+}
+
+[data-anime="left"] {
+    transform: translate3d(-100%, 0, 0);
+}
+
+[data-anime="right"] {
+    transform: translate3d(100%, 0, 0);
+}
+
+[data-anime].animate {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+
+@media (max-width: 1860px) {
+    .carousel-control-next {
+        display: 0;
+    }
+    .carousel-control-prev {
+        display: 0;
+    }
+    
+}
+
+#footer{
+    padding: 23px;
+    color: #fff;
+    font-size: 15px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 100;
+}
+
+
