--- a/templates/index.html
+++ b/templates/index.html
@@ -38,12 +38,12 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item text-white" href="#portfolio">Cards</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item text-white" href="#">Little Snake</a></li>
-              <li><a class="dropdown-item text-white" href="#">Portfólio Pessoal Matheus</a></li>
-              <li><a class="dropdown-item text-white" href="#">Portfólio Pessoal Babidi</a></li>
-              <li><a class="dropdown-item text-white" href="#">Pokédex 1</a></li>
-              <li><a class="dropdown-item text-white" href="#">Pokédex 2</a></li>
-              <li><a class="dropdown-item text-white" href="#">Yoshi Jump</a></li>
+              <li><a class="dropdown-item text-white" target="_blank" href="https:/kaeix.github.io/Mario/">Yoshi Jump</a></li>
+              <li><a class="dropdown-item text-white" target="_blank" href="https://kaeix.github.io/Pokedex/">Projeto Pokédex</a></li>
+              <li><a class="dropdown-item text-white" target="_blank" href="https://matheushmsportfolio.herokuapp.com">Portfólio Pessoal Matheus</a></li>
+              <li><a class="dropdown-item text-white" target="_blank" href="https://github.com/verezeeee">Little Snake</a></li>
+              <li><a class="dropdown-item text-white" target="_blank" href="https://github.com/kaeix/testes">Portfólio Pessoal Babidi</a></li>
+              <li><a class="dropdown-item text-white" target="_blank" href="https://github.com/verezeeee/Pokedex-master">Pokédex</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -123,8 +123,7 @@
                     <div class="d-flex justify-content-center"></div>
                     <a href="https://github.com/kaeix/Mario" target='_blank' class="btn btn-outline-dark me-3"><i
                         class="bi bi-github"></i></a>
-                    <a href="https:/kaeix.github.io/Mario/" target='_blank' class="btn btn-outline-primary"><i
-                        class="bi bi-link-45deg"></i></a>
+                    
 
 
                   </div>
@@ -138,10 +137,9 @@
                     <h5 class="card-title">Pokédex</h5>
                     <p class="card-text">Pokédex feita a partir de html, css e JavaScript contendo os 151 pokémons da primeira geração e suas respectivas características.</p>
                     <div class="d-flex justify-content-center"></div>
-                    <a href="https://github.com/kaeix/Mario" target='_blank' class="btn btn-outline-dark me-3"><i
+                    <a href="https://github.com/verezeeee/Pokedex-master" target='_blank' class="btn btn-outline-dark me-3"><i
                         class="bi bi-github"></i></a>
-                    <a href="https:/kaeix.github.io/Mario/" target='_blank' class="btn btn-outline-primary"><i
-                        class="bi bi-link-45deg"></i></a>
+                    
 
 
                   </div>
@@ -165,10 +163,9 @@
                   <div class="card-body">
                     <h5 class="card-title">Portfólio do Matheus</h5>
                     <p class="card-text">Portfólio responsivo feito a partir de html, css e JavaScript com layout moderno contendo informações pessoais e profissionais, com lincagem de links de projetos e redes sociais.</p>
-                    <a href="https://github.com/kaeix/Pokédex" target='_blank'
+                    <a href="https://github.com/verezeeee/Portfolio-master" target='_blank'
                       class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
-                    <a href="https:/kaeix.github.io/Pokedex" target='_blank' class="btn btn-outline-primary"><i
-                        class="bi bi-link-45deg"></i></a>
+                    
 
 
                   </div>
@@ -182,10 +179,9 @@
                     <h5 class="card-title">Portfólio do Babidi</h5>
                     <p class="card-text">Portfólio responsivo feito a partir de html, css e JavaScript com layout moderno contendo informações pessoais e profissionais, com lincagem de links de projetos e redes sociais.</p>
                     <div class="d-flex justify-content-center"></div>
-                    <a href="https://github.com/kaeix/Mario" target='_blank' class="btn btn-outline-dark me-3"><i
+                    <a href="https://github.com/kaeix/testes" target='_blank' class="btn btn-outline-dark me-3"><i
                         class="bi bi-github"></i></a>
-                    <a href="https:/kaeix.github.io/Mario/" target='_blank' class="btn btn-outline-primary"><i
-                        class="bi bi-link-45deg"></i></a>
+                    
 
 
                   </div>
@@ -210,10 +206,9 @@
                   <div class="card-body">
                     <h5 class="card-title">Projeto little Snack</h5>
                     <p class="card-text">Projeto do famoso jogo da cobrinha feito somendo com a linguagem python.</p>
-                    <a href="https://github.com/kaeix/Pokédex" target='_blank'
+                    <a href="https://github.com/verezeeee" target='_blank'
                       class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
-                    <a href="https:/kaeix.github.io/Pokedex" target='_blank' class="btn btn-outline-primary"><i
-                        class="bi bi-link-45deg"></i></a>
+                    
 
 
                   </div>
@@ -227,10 +222,9 @@
                     <h5 class="card-title">Projeto Pokédex</h5>
                     <p class="card-text">Projeto feito a partir de html,css e JavaScript onde é possível pesquisar pokémons a partir de seu nome ou número para ver sua animação padrão.</p>
                     <div class="d-flex justify-content-center"></div>
-                    <a href="https://github.com/kaeix/Mario" target='_blank' class="btn btn-outline-dark me-3"><i
+                    <a href="https://github.com/kaeix/Pokedex" target='_blank' class="btn btn-outline-dark me-3"><i
                         class="bi bi-github"></i></a>
-                    <a href="https:/kaeix.github.io/Mario/" target='_blank' class="btn btn-outline-primary"><i
-                        class="bi bi-link-45deg"></i></a>
+                    
 
 
                   </div>
